// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BranchList grid matches snapshot 1`] = `
<div>
  <div
    class="gap-5 grid grid-cols-4"
  >
    <p>
      Card
    </p>
    <p>
      Card
    </p>
    <p>
      Card
    </p>
  </div>
</div>
`;

exports[`BranchList matches snapshot 1`] = `
<div>
  <div
    class="gap-5 flex flex-col"
  >
    <p>
      Card
    </p>
    <p>
      Card
    </p>
    <p>
      Card
    </p>
  </div>
</div>
`;

exports[`BranchList matches snapshot with no branches 1`] = `
<div>
  <h3
    class="text-foreground-500"
  >
    Looks like there are no versions here
  </h3>
</div>
`;
